--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,17 +17,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity_login" />
-<<<<<<< HEAD
         <activity android:name=".MainActivity_Home" />
-
-        <activity android:name=".ruang"></activity>
-
         <activity android:name=".PesanActivity"></activity>
-
-=======
-
-        <activity android:name=".MainActivity_Home"></activity>
->>>>>>> parent of 19c8dae... ruangan
+        <activity android:name=".profil"></activity>
     </application>
 
 </manifest>
