--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".profil" />
         <activity android:name=".MainActivity_ruangan" />
         <activity android:name=".MainActivity_gedung" />
-        <activity android:name=".sunting_Activity"></activity>
+        <activity android:name=".sunting_Activity" />
+        <activity android:name=".detail_Ruangan_Activity"></activity>
     </application>
 
 </manifest>
