--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,9 @@
         <activity android:name=".MainActivity_ruangan" />
         <activity android:name=".MainActivity_gedung" />
         <activity android:name=".sunting_Activity" />
-
-        <activity android:name=".detail_Ruangan_Activity"></activity>
-        <activity android:name=".MainActivity_detailGedung"></activity>
+        <activity android:name=".detail_Ruangan_Activity" />
+        <activity android:name=".MainActivity_detailGedung" />
+        <activity android:name=".detail_Gedung_Activity"></activity>
     </application>
 
 </manifest>
