--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.4.0'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
