--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ulfa.itmaps">
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,11 +28,25 @@
         <activity android:name=".PesanActivity" />
         <activity android:name=".profil" />
         <activity android:name=".MainActivity_ruangan" />
-        <activity android:name=".MainActivity_gedung" />
         <activity android:name=".sunting_Activity" />
         <activity android:name=".detail_Ruangan_Activity" />
         <activity android:name=".MainActivity_detailGedung" />
-        <activity android:name=".detail_Gedung_Activity"></activity>
+        <activity android:name=".detail_Gedung_Activity" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBCh4a7R_W_xDz5KEtqCVrKpaKDCjrqDFI" />
+
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
     </application>
 
 </manifest>
