Memperbaiki kesalahan pemanggilan recycler view yang terbalik, penambahan login belum fix

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity android:name=".MainActivity_ruangan" />
         <activity android:name=".sunting_Activity" />
         <activity android:name=".detail_Ruangan_Activity" />
-        <activity android:name=".MainActivity_detailGedung" />
+        <activity android:name=".MainActivity_Gedung" />
         <activity android:name=".detail_Gedung_Activity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
