--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ulfa.itmaps">
+
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -32,7 +33,6 @@
         <activity android:name=".MainActivity_ruangan" />
         <activity android:name=".sunting_Activity" />
         <activity android:name=".detail_Ruangan_Activity" />
-        <activity android:name=".MainActivity_detailGedung" />
         <activity android:name=".detail_Gedung_Activity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -48,7 +48,8 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".MainActivity_gedung"></activity>
     </application>
 
 </manifest>
