--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,14 +43,11 @@ dependencies {
     implementation 'com.android.support:gridlayout-v7:28.0.0'
     //implementation 'com.github.conhea:floatingactionbutton:2.0.2'
     implementation 'com.android.support:design:28.0.0'
-
     //Maps
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
-
     implementation 'com.android.support:support-annotations:27.1.1'
-
     //searchview
     implementation 'com.miguelcatalan:materialsearchview:1.4.0'
-
+    implementation 'com.android.support:design:28.0.0'
 }
