--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- Required to show current location -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -64,7 +63,8 @@
             android:label="@string/title_activity_maps" />
         <activity android:name=".MainActivity_Gedung" />
         <activity android:name=".Chatbot_Activity" />
-        <activity android:name=".Main2Activity_perbaikan"></activity>
+        <activity android:name=".Main2Activity_perbaikan" />
+        <activity android:name=".Pencarian_Activity"></activity>
     </application>
 
 </manifest>
