--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
     implementation 'com.google.code.gson:gson:2.6.2'
     implementation 'com.github.bumptech.glide:glide:4.4.0'
-    implementation 'com.google.android.gms:play-services-maps:16.0.0'
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -51,6 +49,6 @@ dependencies {
     implementation 'com.android.support:support-annotations:27.1.1'
 
     //searchview
-    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
+//    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
 
 }
